# R136

./: .gitignore  CMakeLists.txt  CMakeSettings.json  R136.sln  R136.vcxproj  R136.vcxproj.filters  README.md  console.cpp  cpp.hint  include.h  init.cpp  intro.cpp  loadsave.cpp  main.cpp  packages.config  r136.h  r136data.rip  r136data.rip.bak  random.cpp  resource.h  status.cpp  use.cpp  utf8.c  utf8.h
.github/workflows/: cmake.yml  msbuild.yml
include/: act.h  actions.h  animates.h  base.h  commands.h  console.h  console_inlines.h  constants.h  gamedata.h  general.h  init.h  items.h  main.h  parser.h  r136.h  r136_inlines.h  r136_templates.h  random.h  startup.h  status.h
include-external/: curses.h
include/constants/: r136.h
include/data/: animates.h  connections.h  items.h  rooms.h
include/inlines/: base.h  console.h  general.h  items.h  r136.h  random.h
include/templates/: base.h  console.h  items.h  r136.h
include/types/: animates.h  base.h  console.h  general.h  items.h  r136.h  random.h
src/: CMakeLists.txt  act.cpp  act.h  actions.cpp  base.cpp  console.cpp  console.h  gamedata.cpp  general.cpp  init.cpp  init.h  intro.cpp  loadsave.cpp  parser.cpp  r136.cpp  random.cpp  startup.cpp  status.cpp  use.cpp  utilities.cpp
src/animates/: CMakeLists.txt  barbecue.cpp  computer.cpp  door.cpp  dragon.cpp  dragonhead.cpp  gnu.cpp  greencrystal.cpp  hatch.cpp  hellhound.cpp  lava.cpp  mist.cpp  plant.cpp  redtroll.cpp  swamp.cpp  swelling.cpp  teleporter.cpp  tree.cpp  vacuum.cpp  voices.cpp
src/commands/: CMakeLists.txt  item.cpp  location.cpp  simple.cpp
src/items/: CMakeLists.txt  bandage.cpp  flashlight.cpp  sword.cpp  tnt.cpp
utf8/: CMakeLists.txt
